--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body {
 }
 
 header {
-    background-color: #333;
+    background-color: #001c57;
     color: white;
     padding: 20px 0;
     text-align: center;
@@ -61,6 +61,73 @@ footer {
     text-align: center;
     margin-top: 40px;
     padding: 20px;
-    background-color: #333;
+    background-color: #001c57;
     color: white;
+}
+
+#portrait {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 25%;
+    max-width: 100%;
+    height: auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+#running {
+    display: block;
+    margin-left: auto;
+    margin-right: 10px;
+    width: 20%;
+    max-width: 75%;
+    height: auto;
+}
+
+p {
+    text-align: center;
+    font-size: 15px;
+}
+
+.fa {
+    padding: 20px;
+    font-size: 30px;
+    width: 50px;
+    text-align: center;
+    text-decoration: none;
+}
+
+.fa:hover {
+    opacity: 0.7;
+}
+
+.fa-linkedin {
+    color: white;
+}
+
+/* Container for the text */
+.text-link {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    text-decoration: none; /* Remove underline from link */
+    color: black; /* Set default text color */
+    font-size: 150px; /* Adjust font size as needed */
+    cursor: pointer; /* Add pointer cursor on hover */
+}
+
+/* Hide hover text initially */
+.text-link .hover-text {
+    display: none;
+}
+
+/* Show hover text and hide base text on hover */
+.text-link:hover .base-text {
+    display: none;
+}
+
+.text-link:hover .hover-text {
+    display: inline;
 }
