--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    font-family: Arial, sans-serif;
+    font-family: sans-serif;
     line-height: 1.6;
     background-color: #f4f4f4;
     color: #333;
@@ -57,6 +57,16 @@ h2 {
     text-align: center;
 }
 
+h3 {
+    margin-top: 10px;
+    margin-bottom: 5px;
+    text-align: center;
+}
+
+h5 {
+    text-align: center;
+}
+
 footer {
     text-align: center;
     margin-top: 40px;
@@ -74,15 +84,12 @@ footer {
     height: auto;
     margin-top: 20px;
     margin-bottom: 20px;
+    border-radius: 5%;
 }
 
-#running {
-    display: block;
-    margin-left: auto;
-    margin-right: 10px;
-    width: 20%;
-    max-width: 75%;
-    height: auto;
+#description {
+    float: center;
+    font-size: 20px;
 }
 
 p {
@@ -130,4 +137,9 @@ p {
 
 .text-link:hover .hover-text {
     display: inline;
+}
+
+.jobs {
+    cursor: pointer;
+    margin-bottom: 2px;
 }
