--- a/styles.css
+++ b/styles.css
@@ -2,144 +2,147 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 body {
-    font-family: sans-serif;
-    line-height: 1.6;
-    background-color: #f4f4f4;
-    color: #333;
-    padding: 20px;
+    font-family: monospace;
+    overflow: hidden; /* Prevent default scrolling */
 }
 
-header {
-    background-color: #001c57;
-    color: white;
-    padding: 20px 0;
-    text-align: center;
-}
-
-header h1 {
-    margin-bottom: 10px;
-}
-
-nav ul {
-    list-style: none;
+.section {
     display: flex;
     justify-content: center;
-}
-
-nav ul li {
-    margin: 0 15px;
-}
-
-nav ul li a {
-    color: white;
-    text-decoration: none;
-    font-size: 1.2em;
-}
-
-nav ul li a:hover {
-    text-decoration: underline;
-}
-
-section {
-    margin: 40px auto;
+    align-items: center;
+    height: 100vh;
     padding: 20px;
-    max-width: 800px;
-    background-color: white;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    color: #fff;
+    position: absolute;
+    top: 100vh; /* Start off-screen */
+    width: 100%;
+    transition: transform 0.8s ease-in-out;
+}
+
+.text {
+    display: flex;
+    flex-direction: column; /* Stack header and paragraph vertically */
+    align-items: center; /* Center align text elements */
+}
+
+#home {
+    background: #70058e;
+    top: 1;
+}
+
+#project1 {
+    background: #38b6f1;
+}
+
+#project2 {
+    background: #d3a625;
+}
+
+#project3 {
+    background: #3ce76f;
+}
+
+#project4 {
+    background: #e40505;
+}
+
+#project5 {
+    background: #282830;
+}
+
+#project6 {
+    background: #003057;
+}
+
+h1 {
+    font-size: 5rem;
+    margin-bottom: 20px;
 }
 
 h2 {
-    margin-bottom: 20px;
-    font-size: 2em;
-    text-align: center;
+    font-size: 2.5rem;
+    max-width: 600px;
+    margin-bottom: 25px;
 }
 
 h3 {
-    margin-top: 10px;
-    margin-bottom: 5px;
-    text-align: center;
-}
-
-h5 {
-    text-align: center;
-}
-
-footer {
-    text-align: center;
-    margin-top: 40px;
-    padding: 20px;
-    background-color: #001c57;
-    color: white;
-}
-
-#portrait {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 25%;
-    max-width: 100%;
-    height: auto;
-    margin-top: 20px;
+    font-size: 1.5rem;
     margin-bottom: 20px;
-    border-radius: 5%;
-}
-
-#description {
-    float: center;
-    font-size: 20px;
 }
 
 p {
+    font-size: 1.1rem;
+    max-width: 600px;
+}
+
+#photo {
+    height: 300px;
+    width: 450px;
+    margin-left: 25px;
+    margin-right: 25px;
+    margin-bottom: 50px;
+    border-radius: 15px;
+}
+
+#start {
+    width: 150px;
+    height: 50px;
+    font-size: 2rem;
     text-align: center;
-    font-size: 15px;
-}
-
-.fa {
-    padding: 20px;
-    font-size: 30px;
-    width: 50px;
-    text-align: center;
-    text-decoration: none;
-}
-
-.fa:hover {
-    opacity: 0.7;
-}
-
-.fa-linkedin {
-    color: white;
-}
-
-/* Container for the text */
-.text-link {
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    text-decoration: none; /* Remove underline from link */
-    color: black; /* Set default text color */
-    font-size: 150px; /* Adjust font size as needed */
-    cursor: pointer; /* Add pointer cursor on hover */
-}
-
-/* Hide hover text initially */
-.text-link .hover-text {
-    display: none;
-}
-
-/* Show hover text and hide base text on hover */
-.text-link:hover .base-text {
-    display: none;
-}
-
-.text-link:hover .hover-text {
-    display: inline;
-}
-
-.jobs {
+    font-family: impact;
+    color: black;
+    background-color: white;
+    border-radius: 5px;
     cursor: pointer;
-    margin-bottom: 2px;
+}
+
+#start:hover {
+    color: white;
+    background-color: black;
+}
+
+#botw-compendium {
+    height: 450px; 
+    width: 100%;
+    margin-left: 50px;
+}
+
+#harryquiz {
+    height:450px;
+    width: 100%;
+    margin-left: 50px;
+}
+
+#robotz {
+    height:450px;
+    width: 100%;
+    margin-left: 50px;
+}
+
+#lightsaber {
+    height:450px;
+    width: 255px;
+    margin-left: 100px;
+}
+
+#judicialAI {
+    height:450px;
+    width: 150%;
+    margin-left: 50px;
+}
+
+#buzzbot {
+    height:450px;
+    width: 100%;
+    margin-left: 50px;
+}
+
+/* Active class moves the section into view */
+.section.active {
+    transform: translateY(-100vh);
 }
